<resources>
    <string name="app_name">FaunaSV</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="map_fragment_label">Map Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for login and register fragment -->
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="confpass">Confirmar contraseña</string>
    <string name="email">Correo electronico</string>
    <string name="noacc">¿No tienes una cuenta? </string>
    <string name="register">Registrate!</string>
    <string name="enter">Entrar</string>
    <string name="login">Iniciar sesión</string>
    <string name="usersingup">Registro de usuario</string>

    <!-- Strings used for main navigation -->
    <string name="title_map">Mapa</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--Strings for the list fragment -->
    <string name="filter">Filtrar:</string>
    <string name="distance">Distancia (en Km)</string>
    <string name="animalname">Nombre del animal</string>
    <string name="speciesname">Nombre de la especie</string>
    <string name="buttonfilter">Filtrar</string>

    <!--Strings for the cardview-->
    <string name="cardusername">Username</string>
    <string name="carddescription">Description</string>
    <string name="cardimage">Image</string>
    <string name="cardanimal">Animal name</string>
    <string name="cardviewinfo">Ver más</string>
    
    <!--Strings for the info fragment-->
    <string name="infoanimalname">Animal:</string>
    <string name="infodesc">Descripción:</string>
    <string name="infouser">Avistamiento por </string>
    <string name="infocords">Coordenadas: </string>
    <string name="infoedit">Editar</string>
    <string name="infomap">Mapa</string>
    <string name="infodistance">Distancia: </string>

    <!--Strings for the add fragment-->
    <string name="addpicture">Agregar imagen</string>
    <string name="addanimalname">Buscar animal:</string>
    <string name="addanimalbutton">Buscar</string>
    <string name="addavistamiento">Agregar avistamiento</string>

    <!-- common strings -->
    <string name="back">Regresar</string>
    <string name="placeholder">placeholder</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment.</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>