<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:layout_marginBottom="70dp"
    tools:context=".AddAvistamientoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/new_avist_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/placeholder"
            android:src="@color/color_primary_light"/>

        <Button
            android:id="@+id/addimage_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/addpicture"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:labelFor="@+id/search_animal_edittex"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/addanimalname"
                android:textSize="16sp"
                android:textColor="@color/color_primary_dark"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/search_animal_edittex"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:textSize="16sp"
                android:textColor="#000"
                android:inputType="text"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/buscar_animal_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.5"
                android:drawableBottom="@drawable/search_image"/>

        </LinearLayout>

        <ListView
            android:id="@+id/list_animal_search"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="20dp"
            android:choiceMode="singleChoice"
            android:listSelector="@color/color_primary_light"
            tools:ignore="NestedScrolling" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/infodesc"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_avist_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addavistamiento_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/addavistamiento"/>
    </LinearLayout>
</ScrollView>