<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:padding="8dp"
    android:elevation="8dp"
    android:divider="@android:color/transparent"
    android:dividerHeight="0.0px"
    android:clipToPadding="false"
    android:clipChildren="false"
    card_view:cardElevation="10dp"
    card_view:cardPreventCornerOverlap="false"
    android:background="@drawable/shadow_cardview"
    android:id="@+id/cardview_item"
    android:layout_marginTop="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/filter_image"
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="8dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/filter_animalname_textview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/animalname"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            android:textColor="@color/color_primary_dark" />

        <TextView
            android:id="@+id/filter_animaldesc_textview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/carddescription"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            android:textColor="#212121"/>

        <TextView
            android:id="@+id/filter_user_textview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/cardusername"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            android:textAlignment="textEnd"
            android:textColor="@color/color_primary_light"/>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#9e9e9e"
            android:layout_marginHorizontal="2dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/cardviewinfo"
            android:padding="8dp"
            android:textSize="20sp"
            android:textColor="@color/color_primary_dark"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>