<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InfoFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="8dp"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/info_imageview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/placeholder" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="4dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/infoanimalname"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:textColor="@color/color_primary_dark"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/info_animalname_textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:text="@string/placeholder"
                    android:textSize="16sp"
                    android:textColor="#000"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="4dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/infocords"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:textColor="@color/color_primary_dark"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/info_coords_textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:text="@string/placeholder"
                    android:textSize="16sp"
                    android:textColor="#000"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="4dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/infodistance"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:textColor="@color/color_primary_dark"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/info_distance_textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:textColor="#000"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/infodesc"
                android:textSize="16sp"
                android:textColor="@color/color_primary_dark"
                android:textStyle="bold"
                android:layout_marginVertical="4dp"/>

            <TextView
                android:id="@+id/info_desc_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/placeholder"
                android:textSize="16sp"
                android:textColor="#000"
                android:paddingVertical="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                android:layout_marginVertical="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/infouser"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="12sp"
                    android:textColor="#484848"
                    android:gravity="center_vertical"/>

                <TextView
                    android:id="@+id/info_user_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/placeholder"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="12sp"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/color_primary_light"
                    android:gravity="center_vertical"/>

            </LinearLayout>
            <TextView
                android:id="@+id/info_date_textview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="12sp"
                android:layout_gravity="end"
                android:textColor="#484848"
                android:gravity="center_vertical"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <Button
                    android:id="@+id/button_map"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="30dp"
                    android:text="@string/infomap"
                    android:background="@drawable/button_round_primary_dark"
                    android:layout_gravity="center"/>
                <Button
                    android:id="@+id/button_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="30dp"
                    android:text="@string/infoedit"
                    android:background="@drawable/button_round_primary_dark"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>